added styling for word breaks

--- a/interface.html
+++ b/interface.html
@@ -1,7 +1,8 @@
+
 <!doctype html>
 <html lang="en" manifest="interface.manifest">
 	<head>
-        <title>Interface 2.0</title>
+        <title>xcayp 0.1</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/> 
 		<meta name="apple-mobile-web-app-capable" content="yes" /> 
@@ -29,11 +30,18 @@
 				font            :  10px Verdana;
 				color           :  #AAAAAA;
 				background-color:  white;
-                overflow       :   hidden;
+                overflow       :   auto;
 			}
             <!html {
                 overflow:hidden;
             }>
+            .wordwrap { 
+               white-space: pre-wrap;      /* CSS3 */   
+               white-space: -moz-pre-wrap; /* Firefox */    
+               white-space: -pre-wrap;     /* Opera <7 */   
+               white-space: -o-pre-wrap;   /* Opera 7 */    
+               word-wrap: break-word;      /* IE */
+            }
 		</style> 
         <style type="text/css">
             .CodeMirror {
@@ -57,6 +65,6 @@
             }
         </style>
 	</head>
-	<body class="bodyclass" scroll="no">
+	<body class="bodyclass">
     </body>
 </html>
