--- a/next/skeleton/interface.html
+++ b/next/skeleton/interface.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="./simple-hint.css">
         
         <script src="./MochiKit.js"               type="text/javascript" charset="utf-8"></script>
+        <script src="./jss.js"                    type="text/javascript" charset="utf-8"></script>
         <script src="./raphael.min.js"            type="text/javascript" charset="utf-8"></script>
         <script src="./pouchdb-nightly.js"        type="text/javascript" charset="utf-8"></script>
         <script src="./raphcomo.js"               type="text/javascript" charset="utf-8"></script>
