--- a/next/skeleton/interface.html
+++ b/next/skeleton/interface.html
@@ -18,6 +18,11 @@
         <script src="./raphael.min.js"            type="text/javascript" charset="utf-8"></script>
         <script src="./pouchdb-nightly.js"        type="text/javascript" charset="utf-8"></script>
         <script src="./raphcomo.js"               type="text/javascript" charset="utf-8"></script>
+        <script src="./codemirror.js"             type="text/javascript" charset="utf-8"></script>
+        <script src="./javascript.js"             type="text/javascript" charset="utf-8"></script>
+        <script src="./jsbeautifier.js"           type="text/javascript" charset="utf-8"></script>
+        <script src="./simple-hint.js"            type="text/javascript" charset="utf-8"></script>
+        <script src="./javascript-hint.js"        type="text/javascript" charset="utf-8"></script>
         <script src="./interface.js"              type="text/javascript" charset="utf-8"></script>
 
 		<style type="text/css">
